[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI_button selected.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI_button un-selected.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI Title.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI Text Quit.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI Text Start.png" type="Texture" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 8.0
margin_right = 258.0
margin_bottom = 264.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="MenuItems" type="VBoxContainer" parent="."]
margin_left = 357.0
margin_top = -27.0
margin_right = 485.0
margin_bottom = 233.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="StartButton" type="TextureButton" parent="MenuItems"]
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_focused = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MenuItems/StartButton"]
margin_left = 24.8
margin_top = 33.6
margin_right = 152.8
margin_bottom = 161.6
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="ExitButton" type="TextureButton" parent="MenuItems"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_focused = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="MenuItems/ExitButton"]
margin_left = 24.8
margin_top = 33.6
margin_right = 152.8
margin_bottom = 161.6
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[connection signal="pressed" from="MenuItems/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MenuItems/ExitButton" to="." method="_on_ExitButton_pressed"]
